<resources>
    <string name="app_name">Fake Post</string>
    <string name="name">Tap to add name</string>
    <string name="username">Tap to add username</string>
    <string name="body">Enter Content www.gmail.com @the #hkjhs thor.jane@gmail.com jhg ytgh vjf </string>
    <string name="time">12:45</string>
    <string name="dot">.</string>
    <string name="date">15 May 2019</string>
    <string name="deviceSelection">Twitter for iPhone</string>
    <string name="reTweets">Retweets</string>
    <string name="likes">Likes</string>
    <string name="content">Tap to Enter Text</string>
    <string name="SampleNumber">555</string>
    <string name="todo">TODO</string>


    <string name="action_settings">Settings</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <string name="dateNTime">Date &amp; Time</string>


    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="drop_down">Drop Down Menu</string>
    <string name="verified_symbol">Verified Symbol</string>
    <string name="text_tweet">Text Tweet</string>
    <string name="image_tweet">Image Tweet</string>
    <string name="comments">Comments</string>
    <string name="shares">Shares</string>

    <string name="number">555</string>



</resources>
