<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/AppTheme"
        tools:context=".TweetWithImage">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorWhite"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle"/>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/my_toolbar">
            <RelativeLayout
                android:id="@+id/mainTweet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/headPart"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/linearLayoutForImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true">
                        <com.github.siyamed.shapeimageview.CircularImageView
                            android:id="@+id/profilePic"
                            android:layout_width="66dp"
                            android:layout_height="66dp"
                            android:adjustViewBounds="true"
                            android:padding="2dp"
                            android:src="@drawable/ic_add_icon"
                            android:layout_margin="13.2dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutForName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@id/linearLayoutForImage">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="13.2dp"
                                android:fontFamily="@font/helvetica_neue"

                                android:padding="4dp"
                                android:text="@string/name"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                            <ImageView
                                android:id="@+id/verified_icon"
                                android:layout_marginTop="13.2dp"
                                android:layout_marginBottom="0mm"
                                android:paddingTop="6dp"
                                android:paddingBottom="6dp"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/twitter_verified"
                                android:scaleType="fitStart"
                                android:visibility="gone"
                                android:contentDescription="Verfied Symbol" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/helvetica_neue"
                            android:hint="@string/username"
                            android:padding="4dp"
                            android:textColor="@color/colorGrey"
                            android:textSize="16sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_marginTop="13.2dp"
                            android:padding="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_twitter_drop_icon"/>
                    </LinearLayout>
                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/editPart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/headPart">

                    <com.luseen.autolinklibrary.AutoLinkTextView
                        android:padding="8dp"
                        android:id="@+id/body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:maxLength="280"
                        android:textSize="18sp"
                        android:fontFamily="@font/helvetica_neue"
                        android:hint="@string/content"/>


                    <com.github.siyamed.shapeimageview.RoundedImageView
                        android:id="@+id/image_tweet"
                        android:layout_width="match_parent"
                        android:layout_height="512px"
                        android:layout_margin="10dp"
                        app:siRadius="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_add_icon"/>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/editFooterPart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editPart"
                    android:layout_alignParentStart="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorGrey"
                        android:layout_alignParentStart="true"
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica_neue"
                        android:paddingTop="8dp"
                        android:paddingStart="8dp"
                        android:paddingBottom="8dp"
                        android:paddingEnd="1dp"/>

                    <TextView
                        android:id="@+id/dotAfterTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/textViewTime"
                        android:fontFamily="@font/helvetica_neue"
                        android:paddingStart="2dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="2dp"
                        android:paddingBottom="5dp"
                        android:text="@string/dot" />

                    <TextView
                        android:id="@+id/textViewDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorGrey"
                        android:layout_toEndOf="@id/dotAfterTime"
                        android:textSize="16sp"
                        android:fontFamily="@font/helvetica_neue"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingEnd="1dp"
                        android:paddingStart="1dp"/>

                    <TextView
                        android:id="@+id/dotAfterDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/textViewDate"
                        android:fontFamily="@font/helvetica_neue"
                        android:paddingStart="2dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="2dp"
                        android:paddingBottom="5dp"
                        android:text="@string/dot" />


                    <TextView
                        android:id="@+id/textViewDevice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/dotAfterDate"
                        android:fontFamily="@font/helvetica_neue"
                        android:text="@string/deviceSelection"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlueType1"
                        android:textColorHint="@color/colorBlueType1"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingEnd="1dp"
                        android:paddingStart="1dp"/>

                </RelativeLayout>


                <View
                    android:id="@+id/contentView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorExtraLightGray"
                    android:layout_below="@id/editFooterPart"/>

                <LinearLayout
                    android:id="@+id/linearLayoutRL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_below="@id/contentView">

                    <TextView
                        android:id="@+id/textViewReTweet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/SampleNumber"
                        android:paddingTop="8dp"
                        android:paddingStart="8dp"
                        android:paddingBottom="8dp"
                        android:paddingEnd="2dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/helvetica_neue"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/helvetica_neue"
                        android:text="@string/reTweets"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorGrey" />

                    <TextView
                        android:id="@+id/textViewLikes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/helvetica_neue"
                        android:hint="@string/SampleNumber"
                        android:paddingStart="8dp"
                        android:paddingTop="8dp"
                        android:textSize="18sp"
                        android:paddingEnd="2dp"
                        android:textColor="@color/colorBlack"
                        android:paddingBottom="8dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/likes"
                        android:textSize="18sp"
                        android:textColor="@color/colorGrey"
                        android:fontFamily="@font/helvetica_neue"/>
                </LinearLayout>

                <View
                    android:id="@+id/reTweetView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorExtraLightGray"
                    android:layout_below="@id/linearLayoutRL"/>

                <LinearLayout
                    android:id="@+id/bottomLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/reTweetView"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/ic_twitter_reply_icon"
                        android:contentDescription="@string/todo" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_twitter_retweet_icon"
                        android:gravity="center"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/ic_twitter_heart_icon"
                        android:contentDescription="@string/todo"/>


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/ic_twitter_share_icon"
                        android:contentDescription="@string/todo"/>
                </LinearLayout>

                <View
                    android:id="@+id/bottomView"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorExtraLightGray"
                    android:layout_below="@id/bottomLinearLayout"/>

            </RelativeLayout>


        </ScrollView>


    </RelativeLayout>



